--- a/Traduccion/Capitulo 2/Ch. 3 Funciones y ramificacion.ipynb
+++ b/Traduccion/Capitulo 2/Ch. 3 Funciones y ramificacion.ipynb
@@ -297,20 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<built-in function sum>\n",
-      "500\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print (sum)  # sum is a built-in Python function\n",
     "sum = 500   # rebind the name sum to an int\n",
@@ -337,19 +326,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n",
-      "20\n",
-      "21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 20; \n",
     "b = -2.5\n",
@@ -398,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,20 +395,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.55095\n",
-      "0.55095\n",
-      "0.55095\n",
-      "0.55095\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = yfunc(0.1, 6)\n",
     "print(y)\n",
@@ -2046,14 +2014,19 @@
     "puede ser aproximado por la llamada regla de Simpson:\n",
     "\n",
     "\n",
-    "$$\n",
-    "\\frac{b-a}{3n} = (f(a) + f(b) + 4 \\sum_{i=1}^{n/2}f(a+(2i-1)h)+2 \\sum_{i=1}^{n/2-1}f(a+2ih))\n",
-    "$$\n",
+    "\n",
+    "![Turing's Device](https://github.com/camilopinochet/SciPro/blob/master/new%20folde/Formula%203.6.png?raw=true)\n",
+    "\n",
     "\n",
     "Aquí, $h=(b-a)/n$ y n debe ser un entero par. El problema es hacer una función `Simpson(f, a, b, n = 500)` que devuelve la mano derecha\n",
     "Fórmula lateral de (3.6). Para verificar la implementación, se puede hacer uso del hecho de que la regla de Simpson es exacta para todos los polinómicos f(x) de grado <= 2. Aplique la función Simpson a la integral $\\frac{3}{2}\\int\\limits_0^\\pi\\sin^{3}xdx$, que tiene un valor exacto 2, e investigue cómo varía el error de aproximación con n.\n",
     "\n",
     "**Solución**. La evaluación de la fórmula (3.6) en un programa es sencilla si sabemos cómo implementar la sumatoria $(\\sum)$ y cómo llamar a f. En la Sección 3.1.8 se proporciona una receta de Python para calcular sumas. Básicamente, $\\sum_{i=M}^{N}q(i)$, para alguna expresión $q(i)$ que involucra a $i$, se codifica con la ayuda de un bucle `for` sobre i y una variable de acumulación s para acumular la suma, un término a la vez:\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\frac{b-a}{3n} = (f(a) + f(b) + 4 \\sum_{i=1}^{n/2}f(a+(2i-1)h)+2 \\sum_{i=1}^{n/2-1}f(a+2ih))\n",
+    "$$\n",
     "\n",
     "    s = 0\n",
     "    for i in range(M, N):\n",
@@ -2066,11 +2039,12 @@
     "        sum1 = 0\n",
     "        for i in range(1, n/2 + 1):\n",
     "            sum1 += f(a + (2*i-1)*h)\n",
-    "    sum2 = 0\n",
-    "    for i in range(1, n/2):\n",
-    "        sum2 += f(a + 2*i*h)\n",
-    "    integral = (b-a)/(3*n)*(f(a) + f(b) + 4*sum1 + 2*sum2)\n",
-    "    return integral\n",
+    "                \n",
+    "        sum2 = 0\n",
+    "        for i in range(1, n/2):\n",
+    "            sum2 += f(a + 2*i*h)\n",
+    "        integral = (b-a)/(3*n)*(f(a) + f(b) + 4*sum1 + 2*sum2)\n",
+    "        return integral\n",
     "    \n",
     "Tenga en cuenta que Simpson puede integrar cualquier función de Python f de una variable. Específicamente, podemos implementar\n",
     "\n",
@@ -2087,10 +2061,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "s = 0\n",
     "for i in range(M, N):\n",
@@ -2099,7 +2071,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def h(x):\n",
+    "    return (3./2)*sin(x)**3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2119,17 +2101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def h(x):\n",
-    "    return (3./2)*sin(x)**3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2145,9 +2117,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integral of 1.5*sin^3 from 0 to pi:\n",
+      "n=  2, approx= 3.141592653589793, error=-1.14E+00\n",
+      "n=  6, approx= 1.989171700583579, error= 1.08E-02\n",
+      "n= 12, approx= 1.999489233010781, error= 5.11E-04\n",
+      "n=100, approx= 1.999999902476350, error= 9.75E-08\n",
+      "n=500, approx= 1.999999999844138, error= 1.56E-10\n"
+     ]
+    }
+   ],
    "source": [
     "application()"
    ]
@@ -2305,6 +2290,18 @@
     "Un muy buen ejercicio es simular el flujo del programa a mano, comenzando\n",
     "con la llamada a la función de `application`. El Tutor de Python en línea o un depurador (consulte la Sección F.1) son herramientas convenientes para controlar que su pensamiento sea correcto."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
