--- a/Traduccion/Capitulo 2/Ch. 3 Ejercicios.ipynb
+++ b/Traduccion/Capitulo 2/Ch. 3 Ejercicios.ipynb
@@ -23,12 +23,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def C(F):\n",
+    "    C = (5/9)*(F-32)\n",
+    "    return C\n",
+    "c1 = C(0)\n",
+    "print(c1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Ejercicio 3.2: Evaluar una suma y escribir una función de prueba\n",
     "\n",
-    "**a)** Escriba una función de Python sum_1k(M) que devuelva la suma \n",
+    "**a)** Escriba una función de Python `sum_1k(M)` que devuelva la suma \n",
     "\n",
     "$$\n",
     "s = \\sum_{k=1}^M \\frac{1}{k}\n",
@@ -38,6 +51,42 @@
     "\n",
     "**Consejo**. Recomendamos que **test_sum_1k** siga las convenciones de los marcos de prueba de pytest y nose tal como se explica en las Secciones 3.3.3 y 3.4.2 (vea también la Sección H.6). Significa establecer un éxito de variable booleana en True si la prueba pasa, de lo contrario es Falso. El siguiente paso es hacer valer el éxito, que abortará el programa con un mensaje de error si la salida es False y la prueba falló. Para proporcionar un mensaje de error informativo,\n",
     "puede agregar su propio mensaje de cadena **msg:assert success**, **msg**. Nombre de archivo: **sum_func.py.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_1k(M):\n",
+    "    s = 0\n",
+    "    k = 1\n",
+    "    for i in range(1,M+1):\n",
+    "        s += 1/k\n",
+    "        k+=1\n",
+    "    return s\n",
+    "        \n",
+    "print(sum_1k(3))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_1_div_k(M):\n",
+    "# def sum_1_div_k(M=100):  # (gives the same answer)  \n",
+    "    s = 0\n",
+    "    k = 1\n",
+    "    while k <= M:\n",
+    "        s += 1. / k\n",
+    "        k += 1\n",
+    "    print (s)\n",
+    "\n",
+    "sum_1_div_k(3)\n"
    ]
   },
   {
@@ -56,6 +105,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from math import sqrt\n",
+    "from numpy.lib.scimath import sqrt\n",
+    "\n",
+    "def roots3(a,b,c):\n",
+    "    \n",
+    "    q = sqrt(b ** 2 - 4 * a * c)\n",
+    "    \n",
+    "    x1 = (-b + q) / (2 * a) \n",
+    "    x2 = (-b - q) / (2 * a)\n",
+    "   \n",
+    "    return x1,x2\n",
+    "\n",
+    "print(roots3(1, 3, 2))\n",
+    "print(roots3(1,-2, 3))\n",
+    "print(roots3(1, -1, 1))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,22 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sum([1,3,5,-5])"
+    "def mysum(listsum):\n",
+    "    s = 0\n",
+    "    for i in listsum:\n",
+    "        s += i\n",
+    "    return s\n",
+    "\n",
+    "print(mysum([4,5,6]))\n",
+    "print(sum((4,5,6)))"
    ]
   },
   {
@@ -103,7 +174,7 @@
     "\n",
     "\n",
     "$$\n",
-    "p(x) = \\prod\\limits_{i=0}^{n}(x-r_i)=(x-r_0)(x-r_1)...(x-r_{n-1}(x-r_n))\n",
+    "p(x) = \\prod\\limits_{i=0}^{n}(x-r_i)=(x-r_0)(x-r_1)...(x-r_{n-1})(x-r_n)\n",
     "$$\n",
     "\n",
     "Escriba una función **poly(x, roots)** que tome $x$ y una lista **roots** de las raíces como argumentos y devuelva $p(x)$. Construye un caso de prueba para verificar la implementación. **Nombre de archivo: polyprod.py.**"
@@ -111,19 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "roots = [-1, 1, 2]\n",
+    "\n",
     "\n",
     "def poly(roots, x):\n",
     "    p = 1\n",
@@ -139,40 +203,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#calculo con dos raices, elaborcion propia\n",
+    "\n",
+    "roots1 = [-1, 1, 2]\n",
+    "roots2 = [4, 2, 5]\n",
+    "\n",
+    "def poly2(roots1, roots2):\n",
+    "    p = 1\n",
+    "    for i in range(len(roots2)):\n",
+    "        p *= (roots2[i] - roots1[i])\n",
+    "    return p\n",
+    "\n",
+    "print (poly2(roots1, roots2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Ejercicio 3.6: Integrar una función por la regla trapezoidal\n",
     "\n",
-    "**a)** Una aproximación a la integral de una función f (x) sobre un intervalo [a, b] se puede encontrar al aproximar f (x) por la línea recta que recorre los puntos finales (a, f (a)) y (b, f (b)), y luego encuentra el área debajo de la línea recta, que es el área de un trapecio. La fórmula resultante se convierte en\n",
+    "**a)** Una aproximación a la integral de una función `f(x)` sobre un intervalo `[a, b]` se puede encontrar al aproximar `f(x)` por la línea recta que recorre los puntos finales `(a, f(a))` y `(b, f(b))`, y luego encuentra el área debajo de la línea recta, que es el área de un trapecio. La fórmula resultante se convierte en\n",
     "\n",
-    "$$\n",
-    "\\int\\limits_{a}^{b} f(x)dx = \\frac{b-a}{2}(f(a)+f(b))\n",
-    "$$\n",
+    "![dddd](https://github.com/camilopinochet/SciPro/blob/master/new%20folde/Formula%203.9.png?raw=true)\n",
     "\n",
-    "Escriba una función **trapezint1(f,a,b)** que devuelva esta aproximación a la integral. El argumento **f** es una implementación de Python $f(x)$ de la función matemática $f(x)$."
+    "Escriba una función `trapezint1(f,a,b)` que devuelva esta aproximación a la integral. El argumento `f` es una implementación de Python `f(x)` de la función matemática `f(x)`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The exact integral of exp between 0.00000 and 1.09861 is 2.00000.            The approximate answer is 2.00201 giving an error of 0.00201\n",
-      "The exact integral of cos between 0.00000 and 3.14159 is 0.00000.            The approximate answer is 0.00000 giving an error of 0.00000\n",
-      "The exact integral of sin between 0.00000 and 3.14159 is 2.00000.            The approximate answer is 1.98352 giving an error of 0.01648\n",
-      "The exact integral of sin between 0.00000 and 1.57080 is 1.00000.            The approximate answer is 0.99794 giving an error of 0.00206\n"
+      "1.6405333330773306\n",
+      "1.6405333333333307\n"
      ]
     }
    ],
+   "source": [
+    "from scipy.integrate import quad\n",
+    "from scipy import exp, pi, cos, sin, log\n",
+    "\n",
+    "\n",
+    "def trapezint(f, a, b, n):\n",
+    "    s = (f(a) + f(b)) / 2\n",
+    "    h = (b - a) / float(n)\n",
+    "    for i in range(1, n):\n",
+    "        s += f(a + i * h)\n",
+    "    s *= h\n",
+    "    return s\n",
+    "\n",
+    "\n",
+    "def f1(x):\n",
+    "    x = 0.2 + 25*x - 200*x**2 + 675*x**3 -900*x**4 + 400*x**5\n",
+    "    return x\n",
+    "\n",
+    "print(trapezint(f1, 0, 0.8, 100000))\n",
+    "print(quad(f1, 0, 0.8)[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " **b)** Use la aproximación (3.9) para calcular las siguientes integrales:\n",
+    "$\\int\\limits_{0}^{\\pi} \\cos x dx \\int\\limits_{0}^{\\pi} \\sin x dx$ $\\int\\limits_{0}^{\\pi/2} \\sin x dx$ En cada caso, escribir el error\n",
+    "es decir, la diferencia entre la integral exacta y la aproximación (3.9). Haz bocetos del trapecio de cada integral para que \n",
+    "Comprender cómo se comporta el método en los diferentes casos.\n",
+    "\n",
+    "**c)** Podemos mejorar fácilmente la fórmula (3.9) al aproximar el área bajo la función f (x) mediante dos trapecios de igual tamaño. Derive una fórmula para esta aproximación e implementarla en una función **trapezint2(f,a,b)**. Ejecute los ejemplos de b) y vea cuánto mejor es la nueva fórmula. Haz bocetos de los dos trapezoides en cada caso.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**d)** Una mejora adicional del método de integración aproximado de c) es dividir el área bajo la curva f (x) en n trapecios de igual tamaño. Basándose en esta idea, derive la siguiente fórmula para aproximar la integral:\n",
+    "\n",
+    "![formula 3.10](https://github.com/camilopinochet/SciPro/blob/master/new%20folde/Formula%203.10.png?raw=true)\n",
+    "\n",
+    "donde h es el ancho de los trapecios, $h=(b-a)/n$, and $x_i=a+ih$, $i=0$,. . . , $n$, son las coordenadas de los lados de los trapezoides.\n",
+    "\n",
+    "La siguiente figura visualiza la idea de la regla trapezoidal.\n",
+    "\n",
+    "![grafico 3.10](https://github.com/camilopinochet/SciPro/blob/master/new%20folde/Grafico%203.10.png?raw=true)\n",
+    "\n",
+    "\n",
+    "Implementar (3.10) en una función de python **trapezint(f, a, b, n)**. Ejecute los ejemplos de b) con n = 10.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from scipy.integrate import quad\n",
     "from scipy import exp, pi, cos, sin, log\n",
@@ -208,55 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**b)** Use la aproximación (3.9) para calcular las siguientes integrales:\n",
-    "$\\int\\limits_{0}^{\\pi} \\cos x dx \\int\\limits_{0}^{\\pi} \\sin x dx$ $\\int\\limits_{0}^{\\pi/2} \\sin x dx$ En cada caso, escribir el error\n",
-    "es decir, la diferencia entre la integral exacta y la aproximación (3.9). Haz bocetos del trapecio de cada integral para que \n",
-    "Comprender cómo se comporta el método en los diferentes casos.\n",
-    "\n",
-    "**c)** Podemos mejorar fácilmente la fórmula (3.9) al aproximar el área bajo la función f (x) mediante dos trapecios de igual tamaño. Derive una fórmula para esta aproximación e implementarla en una función **trapezint2(f,a,b)**. Ejecute los ejemplos de b) y vea cuánto mejor es la nueva fórmula. Haz bocetos de los dos trapezoides en cada caso.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**d)** Una mejora adicional del método de integración aproximado de c) es dividir el área bajo la curva f (x) en n trapecios de igual tamaño. Basándose en esta idea, derive la siguiente fórmula para aproximar la integral:\n",
-    "\n",
-    "$$\n",
-    "\\int\\limits_{a}^{b} f(x)dx = \\sum_{0=1}^{n-1} \\frac{1}{2}h(f(x_1)+f(x_{1+1}))\n",
-    "$$\n",
-    "\n",
-    "donde h es el ancho de los trapecios, $h=(b-a)/n$, and $x_i=a+ih$, $i=0$,. . . , $n$, son las coordenadas de los lados de los trapezoides.\n",
-    "\n",
-    "La siguiente figura visualiza la idea de la regla trapezoidal.\n",
-    "\n",
-    "![Captura%20de%20pantalla%202019-05-02%20a%20las%202.29.32%20p.m..png](attachment:Captura%20de%20pantalla%202019-05-02%20a%20las%202.29.32%20p.m..png)\n",
-    "\n",
-    "Implementar (3.10) en una función de python **trapezint(f, a, b, n)**. Ejecute los ejemplos de b) con n = 10.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The exact integral of exp between 0.00000 and 1.09861 is 2.00000.            The approximate answer is 2.00201 giving an error of 0.00201\n",
-      "The exact integral of cos between 0.00000 and 3.14159 is 0.00000.            The approximate answer is 0.00000 giving an error of 0.00000\n",
-      "The exact integral of sin between 0.00000 and 3.14159 is 2.00000.            The approximate answer is 1.98352 giving an error of 0.01648\n",
-      "The exact integral of sin between 0.00000 and 1.57080 is 1.00000.            The approximate answer is 0.99794 giving an error of 0.00206\n"
+      "a=0.00  b=1.099 ex=2.000 ap=2.002 err=0.0020111771 10\n",
+      "a=0.00  b=3.142 ex=0.000 ap=0.000 err=0.0000000000 10\n",
+      "a=0.00  b=3.142 ex=2.000 ap=1.984 err=0.0164764625 10\n",
+      "a=0.00  b=1.571 ex=1.000 ap=0.998 err=0.0020570136 10\n"
      ]
     }
    ],
@@ -280,15 +378,13 @@
     "\n",
     "functions = [f1, f2, f3, f4]\n",
     "\n",
-    "\n",
     "def verify(f, a, b, n):\n",
     "    exact = quad(f, a, b)[0]\n",
     "    approx = trapezint(f, a, b, n)\n",
     "    error = abs(exact - approx)\n",
-    "    print ('The exact integral of %s between %.5f and %.5f is %.5f. \\\n",
-    "           The approximate answer is %.5f giving an error of %.5f' \\\n",
-    "        % (f.__name__, a, b, exact, approx, error))\n",
-    "\n",
+    "    print (\"a={:2.2f}  b={:.3f} ex={:.3f} ap={:.3f} err={:.10f} {}\"\\\n",
+    "           .format(a,b,exact,approx,error,n))\n",
+    "    \n",
     "for f in functions:\n",
     "    verify(f[0], f[1], f[2], 10)"
    ]
@@ -306,9 +402,8 @@
     "\n",
     "**Observaciones**. La fórmula (3.10) no es la forma más común de expresar la regla de integración trapezoidal. La razón es que $f(xi+1)$ se evalúa dos veces, primero en el término i y luego como $f(x_i)$ en el término i + 1. La fórmula puede desarrollarse aún más para evitar evaluaciones innecesarias de $f(x_i + 1)$, que resultados en la forma estándar\n",
     "\n",
-    "$$\n",
-    "\\int\\limits_{a}^{b} f(x)dx =, \\frac{1}{2}h(f(a)+f(b)) +h\\sum_{i=1}^{n-1}f(x_i)\n",
-    "$$\n"
+    "\n",
+    "![formula 3 .11](https://github.com/camilopinochet/SciPro/blob/master/new%20folde/Formula%203.11.png?raw=true)"
    ]
   },
   {
@@ -325,6 +420,8 @@
     "La idea de la regla del punto medio para la integración es dividir el área bajo la curva $f(x)$ en n rectángulos de igual tamaño (en lugar de trapecios como en el **Ejercicio 3.6).** La altura del rectángulo está determinada por el valor de f en el punto medio del rectángulo. La siguiente figura ilustra la idea.\n",
     "\n",
     "![Captura%20de%20pantalla%202019-05-02%20a%20las%202.57.57%20p.m..png](attachment:Captura%20de%20pantalla%202019-05-02%20a%20las%202.57.57%20p.m..png)\n",
+    "\n",
+    "\n",
     "\n",
     "Calcule el área de cada rectángulo, resúmalos y llegue a la fórmula para la regla del punto medio:\n",
     "\n",
